<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/empR"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/empR" />
        <item
            android:id="@+id/emplist"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/empList" />
        <item
            android:id="@+id/depart"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/department" />

        <item
            android:id="@+id/report"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/attendence"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/manual"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/shift"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/shift" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_menu_gallery"
                android:title="About us" />
            <item
                android:id="@+id/contact"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="contact us" />
        </menu>
    </item>
</menu>